# python-dev-core

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
src/python_dev_core/: __init__.py
src/python_dev_core/core/: __init__.py  main.py
src/python_dev_core/utils/: __init__.py  helpers.py
src/python_dev_core/utils/logging/: __init__.py  _auto_logger.py  _logconfig.py
src/tests/: __init__.py  conftest.py  test_logging.py
