[project]
name = "python-dev-core"
version = "0.1.0"
description = "Python開発のためのコアユーティリティパッケージ"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Hashimoto", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["development", "utilities", "logging", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
enable_incomplete_feature = ["NewGenericSyntax"]

[tool.ruff.lint]
exclude = [".venv"]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
]
ignore = [
    "G004",
    "F821",
    "C401",
    "C408",
    "RUF001",
    "RUF002",
    "RUF003",
    "PERF203",
    "PERF401",
    "PLR2004",
    "PLC2401",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "mypy>=1.16.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
